--- a/app/views/create-account/account-details.html
+++ b/app/views/create-account/account-details.html
@@ -37,6 +37,10 @@
             {
               value: "Bedfordshire",
               text: "Bedfordshire"
+            },
+            {
+              value: "Cambridgeshire",
+              text: "Cambridgeshire"
             }
           ]
         }) }}
