--- a/app/views/create-account/transfer-details/check-answers.html
+++ b/app/views/create-account/transfer-details/check-answers.html
@@ -1,6 +1,6 @@
 {% extends "layouts/main.html" %}
 
-{% set pageName = "Check transfer details" %}
+{% set pageName = "Check case, area and court code details" %}
 
 {% block beforeContent %}
 
@@ -17,13 +17,13 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
       
-      <span class="govuk-caption-l">Transfer details</span>
-      <h1 class="govuk-heading-l">{{pageName}}</h1>
+      <span class="govuk-caption-l">Case, area and court code details</span>
+      <h1 class="govuk-heading-l">Check case, area and court code details</h1>
 
       {{ govukSummaryList({
         card: {
           title: {
-            text: "Transfer details"
+            text: "Case, area and court code details"
           }
         },
         rows: [
