--- a/app/views/create-account/personal-details/address.html
+++ b/app/views/create-account/personal-details/address.html
@@ -75,7 +75,7 @@
         {% endcall %}
 
         {{ govukButton({
-          text: "Continue"
+          text: "Save and continue"
         }) }}
 
       </form>
