--- a/app/views/create-account/transfer-details/transfer-details.html
+++ b/app/views/create-account/transfer-details/transfer-details.html
@@ -131,7 +131,7 @@
               classes: "govuk-label--s"
           },
           hint: {
-              text: "This is the reference used in the acknowledgement letter"
+              text: "This is the reference that will be used in the acknowledgement letter"
           },
           classes: "govuk-input--width-10 govuk-input--extra-letter-spacing govuk-!-margin-bottom-0",
           id: "ljaReferenceCode",
