start of Sprint 3

--- a/app/views/create-account/account-details.html
+++ b/app/views/create-account/account-details.html
@@ -1,6 +1,6 @@
 {% extends "layouts/main.html" %}
 
-{% set pageName = "Fines account details" %}
+{% set pageName = "Account details" %}
 
 {% block beforeContent %}
 
