--- a/app/views/index.html
+++ b/app/views/index.html
@@ -12,6 +12,10 @@
       <!-- <p class="govuk-body"><a href="./create-account/lja-code.html" class="govuk-link--no-visited-state">LJA code example</a></p> -->
 
       <!-- <p><a href="/moj-design-system">MoJ Design System</a></p> -->
+      <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
+
+      <p>Password: gob</p>
+
     </div>
   </div>
 
