--- a/app/views/create-account/personal-details/check-answers.html
+++ b/app/views/create-account/personal-details/check-answers.html
@@ -5,7 +5,7 @@
 {% block beforeContent %}
 
 {% if data['personal-details-end'] == 'true'%}
-  <a href="../task-list.html" class="govuk-back-link">Back to fines account</a>
+  <a href="../task-list.html" class="govuk-back-link">Back to account</a>
 {% else %}
   <a href="address.html" class="govuk-back-link">Back</a>
 {% endif %}
@@ -120,7 +120,7 @@
               text: "National Insurance number"
             },
             value: {
-              html: data['defendantNationalInsuranceNumber'] or 'Not provided'
+              html: data['defendantNationalInsuranceNumber'] or 'Not provided' 
             },
             actions: {
               items: [
