--- a/app/views/create-account/personal-details/personal-details.html
+++ b/app/views/create-account/personal-details/personal-details.html
@@ -209,7 +209,7 @@
 
         
         {{ govukButton({
-          text: "Save and continue"
+          text: "Continue"
         }) }}
 
       </form>
