--- a/app/views/create-account/personal-details/address.html
+++ b/app/views/create-account/personal-details/address.html
@@ -13,9 +13,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       
-      <span class="govuk-caption-l">Defendant details</span>
-
-      <form method="post" novalidate action="check-answers">
+      <form method="post" novalidate action="language-preference">
 
         <!-- ADDRESS -->
         {% call govukFieldset({
