--- a/app/views/create-account/personal-details/check-answers.html
+++ b/app/views/create-account/personal-details/check-answers.html
@@ -7,7 +7,7 @@
 {% if data['personal-details-end'] == 'true'%}
   <a href="../task-list.html" class="govuk-back-link">Back to account</a>
 {% else %}
-  <a href="address.html" class="govuk-back-link">Back</a>
+  <a href="language-preference.html" class="govuk-back-link">Back</a>
 {% endif %}
 
 {% endblock %}
@@ -35,7 +35,6 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
       
-      <span class="govuk-caption-l">Defendant details</span>
       <h1 class="govuk-heading-l">{{pageName}}</h1>
 
       
@@ -148,6 +147,40 @@
                 }
               ]
             }
+          },
+          {
+            key: {
+              text: "Document language"
+            },
+            value: {
+              html: data['documentLanguage']
+            },
+            actions: {
+              items: [
+                {
+                  href: "language-preference",
+                  text: "Change",
+                  visuallyHiddenText: "document language"
+                }
+              ]
+            }
+          },
+          {
+            key: {
+              text: "Court hearing language"
+            },
+            value: {
+              html: data['hearingLanguage']
+            },
+            actions: {
+              items: [
+                {
+                  href: "language-preference",
+                  text: "Change",
+                  visuallyHiddenText: "court hearing language"
+                }
+              ]
+            }
           }
         ]
       }) }}
@@ -156,18 +189,18 @@
       <form method="post" novalidate action="../task-list?personal-details-end=true">
 
         {{ govukCheckboxes({
-          name: "PDstatus",
-          values: data['PDstatus'],
+          name: "pdCompleted",
+          values: data['pdCompleted'],
           items: [
             {
-              value: "Completed",
+              value: "true",
               text: "I have completed this section"
             }
           ]
         }) }}
 
         {{ govukButton({
-          text: "Continue"
+          text: "Finish"
         }) }}
 
       </form>
