--- a/app/views/create-account/summary/check-answers.html
+++ b/app/views/create-account/summary/check-answers.html
@@ -5,7 +5,7 @@
 {% block beforeContent %}
 
 {% if data['transfer-details-end'] == 'true'%}
-  <a href="../task-list.html" class="govuk-back-link">Back to account</a>
+  <a href="../task-list.html" class="govuk-back-link">Back</a>
 {% else %}
   <a href="summary.html" class="govuk-back-link">Back</a>
 {% endif %}
