--- a/app/views/create-account/language-preference/language-preference.html
+++ b/app/views/create-account/language-preference/language-preference.html
@@ -4,7 +4,7 @@
 
 {% block beforeContent %}
 
-<a href="./address.html" class="govuk-back-link">Back</a>
+<a href="../task-list.html" class="govuk-back-link">Back</a>
 
 {% endblock %}
 
@@ -14,7 +14,7 @@
     <div class="govuk-grid-column-two-thirds">
       <h1 class="govuk-heading-l">{{ pageName }}</h1>
 
-      <form method="post" novalidate action="check-answers">
+      <form method="post" novalidate action="check-answers?dh-status=started">
 
           {{ govukRadios({
             name: "documentLanguage",
@@ -33,8 +33,7 @@
               },
               {
                 value: "Welsh and English",
-                text: "Welsh and English",
-                checked: "true"
+                text: "Welsh and English"
               }
             ]
           }) }}
@@ -51,13 +50,12 @@
             },
             items: [
               {
-                value: "English",
+                value: "english",
                 text: "English"
               },
               {
-                value: "Welsh and English",
-                text: "Welsh and English",
-                checked: "true"
+                value: "welsh-english",
+                text: "Welsh and English"
               }
             ]
           }) }}
