--- a/app/views/create-account/offence-details/add-offence.html
+++ b/app/views/create-account/offence-details/add-offence.html
@@ -15,7 +15,7 @@
 
       <h1 class="govuk-heading-l">{{pageName}}</h1>
 
-      <form method="post" novalidate action="add-imposition">
+      <form method="post" novalidate action="add-imposition?ofd-status=started">
 
 
         {{ govukInput({
