--- a/app/views/create-account/personal-details/address.html
+++ b/app/views/create-account/personal-details/address.html
@@ -13,7 +13,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       
-      <form method="post" novalidate action="language-preference">
+      <form method="post" novalidate action="check-answers">
 
         <!-- ADDRESS -->
         {% call govukFieldset({
