Testing mainly done, final tweaks needed before testing

--- a/app/views/create-account/account-details.html
+++ b/app/views/create-account/account-details.html
@@ -14,7 +14,7 @@
     <div class="govuk-grid-column-two-thirds">
       <h1 class="govuk-heading-l">{{pageName}}</h1>
 
-      <form method="post" novalidate action="task-list?hearingLanguage=welsh-english">
+      <form method="post" novalidate action="task-list?hearingLanguage=welsh-english&documentLanguage=welsh-english">
 
         {{ govukRadios({
           name: "businessUnit",
@@ -37,10 +37,6 @@
             {
               value: "Bedfordshire",
               text: "Bedfordshire"
-            },
-            {
-              value: "Cambridgeshire",
-              text: "Cambridgeshire"
             },
             {
               value: "North Wales",
