--- a/app/views/create-account/language-preference/language-preference.html
+++ b/app/views/create-account/language-preference/language-preference.html
@@ -28,11 +28,11 @@
             },
             items: [
               {
-                value: "English",
+                value: "english",
                 text: "English"
               },
               {
-                value: "Welsh and English",
+                value: "welsh-english",
                 text: "Welsh and English"
               }
             ]
