--- a/app/views/create-account/task-list.html
+++ b/app/views/create-account/task-list.html
@@ -249,7 +249,7 @@
               text: "Offence details",
               classes: "govuk-link--no-visited-state"
             },
-            href: "./offence-details/add-offence.html",
+            href: './offence-details/check-all-offences' if data['offences-check-answers'] == 'true' else './offence-details/add-offence',
             status: ofdStatusTag
           },
           {
