--- a/app/views/create-account/offence-details/add-creditor.html
+++ b/app/views/create-account/offence-details/add-creditor.html
@@ -13,7 +13,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-      <form method="post" novalidate action="check-all-impositions">
+      <form method="post" novalidate action="check-imposition">
 
           {% set creditorMajor %}
             {{ govukInput({
